tests/typing/fail/typecheck/silly_types.act
contract Pass

constructor()

creates

    uint x := 0
    uint y := 2
    bool p := true
    bool q := false

transition g()

iff in range uint256

    x + y

updates

    // TODO: remove this hack once bug #81 is fixed...
    x := x
    y := (x + p) == (q > y)
    p := (x + p) and (q > y)
    q
